# puzzle_project

./: .gitignore  index.md
Ace/Document/: Activity.pptx  DBアプリ仕様.pptx  DBアプリ発表会.pptx  bg.pptx  list_bg.pptx  仕様.xlsx
Ace/sql/: sample.sql  table_test.sql
Pazzle15_site/: Pazzle15DBHelper.py  manage.py  records.csv  serial_sql.py  uwsgi.ini  wsgi.py
Pazzle15_site/pazzle15/: config.py  pazzle15.db  views.py
Puzzle15_site/: Pazzle15DBHelper.py  manage.py  pyproject.toml  records.csv  uwsgi.ini  wsgi.py
Puzzle15_site/puzzle15/: __init__.py  _pazzle15.db  config.py  models.py  pazzle15.db  views.py
Puzzle15_site/puzzle15/static/: style_result.css
Puzzle15_site/puzzle15/templates/: layout.html  navbar.html  page_layout.html  players.html  rankings.html  results.html  results.old.html  sidebar.html  statistics.html
RasPi_py_projects/: puzzle15.db
RasPi_py_projects/ex21_pyserial/: read_serial_dat.py  records.csv  recv_serial.py  stest.py  stest2.py
RasPi_py_projects/ex22_sqlite/: Pazzle15DBHelper.py  create_table.py  import_data_to_sqlite.py  insert_DB.py  insert_users.py  pazzle15.db  show_players.py
RasPi_py_projects/ex25_solve/: Astar.py  solve_main.py  solve_test.py
RasPi_py_projects/ex2x_mix/: DB_loader.py  Pazzle15DBHelper.py  pazzle15.db  read_serial_dat.py  records.csv  serial_sql.py  solve_main.py  solve_test.py
document/: autobuild.sh  cp-dialy.sh  pdf.sh  run.sh  temp-dialy.md
document/office_files/: display.xlsx  fig工房.pptx
document/source/: .toc  abstruct.md  ask20211012.md  conf.py  daily.md  gantt.md  index.md  (+2 more)
src/: main.c  pazzle.c
(+224 files in other folders)
