[tool.poetry]
name = "flask-puzzle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-paginate = "^2024.3.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
